--- a/translations/messages.lt.yaml
+++ b/translations/messages.lt.yaml
@@ -133,3 +133,4 @@ ID: ID
 PaidReservations: ApmokėtosReservacijos
 UnpaidReservations: NeapmokėtosRezervacijos
 User.email: El.paštas
+Close: Uždaryti
